# pins

./: .gitignore  CMakeLists.txt  README.md  library.json  pins.h  pinsx.h  platformio.ini
code/: CMakeLists.txt
code/arduino/: pins_basics.c  pins_display_tft_espi.cpp  pins_esp32_tdc1304_camera.c  pins_esp32_timer.c  pins_hw_defs.h  pins_interrupt.c  pins_interrupt.cpp  pins_setget.c  pins_timer.cpp
code/common/: pins_basics.h  pins_camera.c  pins_camera.h  pins_display.c  pins_display.h  pins_gpio.h  pins_interrupt.h  pins_morse_code.c  pins_morse_code.h  pins_morse_texts.c  pins_parameters.c  pins_parameters.h  pins_spi_device.h  pins_state.c  pins_state.h  pins_tcd1304_camera.c  pins_tdc1304_camera.c  pins_timer.h  pins_to_iocom.c  pins_to_iocom.h
code/duino/: pins_duino_basics.c  pins_duino_gpio.c  pins_duino_gpio.h  pins_duino_pwm.c  pins_duino_pwm.h  pins_duino_timer.c  pins_hw_defs.h
code/esp32/: pins_esp32_analog.c  pins_esp32_analog.h  pins_esp32_basics.c  pins_esp32_gpio.c  pins_esp32_gpio.h  pins_esp32_init.c  pins_esp32_pwm.c  pins_esp32_pwm.h  pins_esp32_set_get.c  pins_esp32_timer.c  pins_espi_display.cpp  pins_hw_defs.h
code/pigpio/: pins_hw_defs.h  pins_pigpio_basics.c  pins_pigpio_gpio.c  pins_pigpio_gpio.h  pins_pigpio_pwm.c  pins_pigpio_pwm.h  pins_pigpio_timer.c
code/simulation/: pins_basics.c  pins_hw_defs.h  pins_interrupt.c  pins_simulation_basics.c  pins_simulation_interrupt.c  pins_simulation_timer.c  pins_timer.c
dependencies/raspberry/: 200724-raspicam-readme.txt
dependencies/windows/ep_usbcamera/: readme.txt  videoInput.h
dependencies/windows/ep_usbcamera_test/: TestVideoInput.cpp
doc/190916-pins-library/: 190916-cover-page.odt  190916-introduction-to-pins.odt  190916-pins-library.odm  190917-c-code-from-json-configuration.odt  190917-json-hardware-configuration.odt  190917-pin-library-functions.odt  190917-pin-library-types.odt  190918-examples-chapter.odt  190918-implementing-pins-for-new-hardware.odt  190918-pins-jane-example.odt  190918-using-pins-chapter.odt
doc/190916-pins-library/jane-example/: 190918-pins-jane-example.odt
doc/200324-connect-linear-camera-TDC1304DG/: 200330-my-timing.txt
doc/2020/: 200324-generate-1MHz-click-signal-with-ESP32.odt  200405-interrupt-handler-example.c
doc/2020/200322-connect-TFT-ST7789-IPS-240x240-to-ESP32/: 200322-readme.txt
doc/2020/200324-connect-linear-camera-TDC1304DG/: 200324-hackaday-and-other-links.txt
doc/2020/200324-connect-linear-camera-TDC1304DG.pdf/: 200324-at-hackaday.txt  200324-hackaday-and-other-links.txt  200324-my-timing-calc.ods  200330-my-timing.txt
doc/2021/: 210907-esp32-camera-library-note-and-license.txt
doc/2021/micro-controller-adapter/: 210827-microcontroller-adapter-connector.ods
downloads/raspberry/: 200724-raspicam-readme.txt  210805-pigpio-readme.txt
examples/: readme.txt
examples/jane/: CMakeLists.txt  platformio.ini  readme.txt
examples/jane/code/: jane.h  jane_example.c  jane_visualstudiocode.ino
examples/jane/config/include/carol/: jane-io.c  jane-io.h  pins-io.c  pins-io.h  pins_io.c  pins_io.h  readme.txt
examples/jane/config/pins/: readme.txt
examples/jane/config/pins/carol/: cpins.sh  jane-io-alternate.c  jane-io-alternate.h  jane-io-alternate.json  jane-io.c  jane-io.h  jane-io.json  pins-io.json
examples/jane/pins/carol/: cpins.sh  jane(copy).json  jane-io.c  jane-io.h  jane-io.json  jane.c  readme.txt
examples/jane/scripts/: config-to-c-code.py  config_to_c_code.py  pin-config-to-c-code.sh
examples/video4linux-test/: V4l-test.pro  v4l-test.cpp
extensions/bus_drivers/common/: pins_adc_mcp3208 (copy).c  pins_adc_mcp3208 .h  pins_adc_mcp3208.c  pins_pwm_pca9685.c  pins_pwm_pca9685_readme.txt
extensions/camera/common/: pins_camera.c  pins_camera.h  pins_esp32_camera.c
extensions/camera/esp32/: pins_esp32_camera.c  pins_esp32_camera.c~RF59cd77b.TMP  pins_esp32_camera.h  pins_esp32_camera_pins.h  pins_esp32_tcd_line_camera.c
extensions/camera/linux/: pins_linux_camera.h  pins_linux_raspicam.cpp  pins_linux_usb_camera.cpp  pins_raspicam.cpp
extensions/camera/simulation/: pins_sim_line_camera.c  pins_sim_line_camera.c~RF59b582e.TMP  pins_simulation_line_camera.c
extensions/camera/windows/: pins_windows_camera.c  pins_windows_camera.h  pins_windows_usb_camera.c  pins_windows_usb_camera.cpp
extensions/detect_motion/common/: pins_detect_motion.c  pins_detect_motion.h
extensions/devicebus/common/: pins_devicebus.c  pins_devicebus.h
extensions/devicebus/pigpio/: pins_pigpio_devicebus.c
extensions/devicebus/simulation/: pins_simulation_devicebus.c
extensions/display/common/: pins_display.c  pins_display.h
extensions/display/esp32/: pins_esp32_espi_display.cpp  pins_espi_display.cpp
extensions/iocom/common/: pins_default_iocom_callback.c  pins_to_iocom.c  pins_to_iocom.h
extensions/iosimulation/: CMakeLists.txt  readme.txt
extensions/iosimulation/code/: config.c  iosimulation.c  iosimulation.h
extensions/iosimulation/scripts/: pin-config-to-c-code.sh  signal-config-to-c-code.sh
extensions/morse/common/: pins_morse_code.c  pins_morse_code.h  pins_morse_texts.c
extensions/spi/common/: pins_spi.c  pins_spi.h
extensions/spi/pigpio/: pins_pigpio_spi.c
extensions/spi/spi_collection/: pins_adc_mcp3208 .h  pins_adc_mcp3208 _readme.txt  pins_adc_mcp3208.c
osbuild/arduino-library/: readme.txt
osbuild/arduino-platformio/: copy-pins-for-platformio.py
osbuild/duino-library/: library.json  readme.txt
osbuild/vs2019/: pins.sln  pins.vcxproj
scripts/: copy-pins-for-duino.py  copy_pins_for_duino.py  git-push-pins.sh  pins-to-c-alternate.py  pins-to-c-alternate2.py  pins-to-c.py  pins_to_c.py
scripts/pins-to-c/: pins-to-c-alternate.py  pins-to-c.py
tests/alarmclock/code/: color_cycle.py  main.py  test1.py  test2.py
tests/alarmclock/doc/: 201216-alarm-clock-initial.txt  201216-benjamin-ST7735s-python-driver-readme.md  201216-getting-started.txt  201216-install-anaconda.txt  201218-wiring-.md  201218-wiring-alarm-clock.md  (+1 more)
tests/raspberry/: analogs-MCP3208.py  pwm-ada-pca9685.py  pwm-pca0685.py
(+87 files in other folders)
